--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>cn.edu.nju.xmh</groupId>
     <artifactId>huluwa</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
@@ -20,5 +21,12 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
